extra method in JavaInspector to distinguish between maddi/openjdk; fix for overrides of accessors